# AI-VibeCodeEval

./: .gitignore  Change_11_27_graph.txt  Dockerfile  README.md  README_ENVIRONMENT.md  Test_Guide.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example  main.py  pyproject.toml  requirement.txt  requirements.txt  test_gemini.py  test_submit_only.py  test_submit_with_delay.py  test_token_api.py  test_token_tracking_detailed.py  테이블명세서.md
.maestro/: PHASE6_PLAN.md  README.md  maestro_state.json
app/: __init__.py  main.py
data/: turn_sessions.json
docs/: API_Keys_Location.md  API_Specification.md  Backend_DB_Configuration_Guide.md  Backend_Docker_Compose_DB_Setup.md  Backend_Docker_Quick_Reference.md  Backend_Docker_Setup_Guide.md  Complete_DB_Setup_Guide.md  Database_Changes_Summary.md  Docker_PostgreSQL_Setup_Guide.md  Endpoint_Change_History.md  Evaluation_Feedback_Implementation.md  Evaluation_System_Architecture.md  Evaluation_System_Improvement_Strategy.md  G-Eval_and_Confidence_Implementation.md  Guardrail_Context_Based_Improvement.md  Guardrail_Implementation_Strategy.md  Guardrail_Prompt_Merge_Example.md  Implementation_Plan_5_Tasks.md  Intent_Based_Evaluation_Criteria.md  Judge0_API_Guide.md  Judge0_Complete_Guide.md  Judge0_Integration_Guide.md  LLM_Factory_Pattern_Guide.md  LLM_Instance_Management_Guide.md  LangChain_Guardrails_Implementation_Guide.md  LangSmith_Guide.md  Local_DB_Migration_Guide.md  Local_DB_Setup_Guide.md  Middleware_File_Consolidation_Analysis.md  Middleware_Guardrail_Order_Analysis.md  Middleware_Guide.md  Next_Steps.md  Node4_Priority_Improvements.md  Node4_Turn_Evaluator_TODO_Status.md  Partial_Code_Provision_Policy.md  Performance_Optimization_LLM_Duplicate_Calls.md  Prompt_Engineering_Guide.md  Prompt_Specification.md  Queue_System_Applications.md  Queue_System_Explanation.md  (+18 more)
scripts/: add_evaluation_constraints.sql  export_schema_sql.py  extract_chaining_finetuning_data.py  extract_evaluation_data.py  extract_response_pairs.py  init-db.sql  migrate_docker_to_local.ps1  migrate_local_to_docker.ps1  migrate_prompt_evaluations.sql  migrate_prompt_messages_unique_constraint.sql  prepare_test_data.sql  run_dev.py  start_adminer.ps1
static/: index.html
(+205 files in other folders)
